- JPA的@ElementCollection注解 - ApplicationRunner初始化数据库 - UserDetailsService.loadUserByUsername() - 启用h2-console（如何放行登录方法和管理页面）

--- a/SpringBoot-UsernamePassword-FormLogin/pom.xml
+++ b/SpringBoot-UsernamePassword-FormLogin/pom.xml
@@ -19,29 +19,34 @@
     </properties>
 
     <dependencies>
+        <!-- 1.data-jpa -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!-- 2.security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <!-- 3.web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <!-- 4.h2 -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- 5.lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- 6.test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -53,16 +58,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- 7.security-test -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>30.1-jre</version>
         </dependency>
     </dependencies>
 
