--- a/SpringBoot-JWT-FormLogin/pom.xml
+++ b/SpringBoot-JWT-FormLogin/pom.xml
@@ -3,16 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.3.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>org.example</groupId>
-    <artifactId>jwt</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <description>JWT for Spring Security</description>
+    <artifactId>jwtform</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <description>JWT And Form Login for Spring Security</description>
 
     <properties>
         <java.version>11</java.version>
