--- a/SpringBoot-OAuth-Login-Example/pom.xml
+++ b/SpringBoot-OAuth-Login-Example/pom.xml
@@ -14,7 +14,7 @@
     <groupId>org.example</groupId>
     <artifactId>oauth</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <description>Spring Boot OAuth Login Example</description>
+    <description>Spring Security + OAuth Login + Google Sign-In 架构与实例解析</description>
 
     <properties>
         <java.version>11</java.version>
