因为kotlin的问题，该模块进展缓慢

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ hs_err_pid*
 /*/target/
 /*/*.iml
 /SpringBoot-OAuth-Login-Example/src/main/resources/application.properties
+/SpringBoot-OAuth-Rest-JWT/src/main/resources/static/login.html
+/SpringBoot-OAuth-Rest-JWT/src/main/resources/application.properties
