--- a/SpringBoot-MyBatis-Single-DataSource/src/main/resources/application.yaml
+++ b/SpringBoot-MyBatis-Single-DataSource/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    initialization-mode: always
     druid:
       url: jdbc:mysql://localhost:3306/common?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
       username: root
