initial commit project with dockerfile-maven-plugin

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ hs_err_pid*
 /.idea/
 /*/target/
 /*/*.iml
+/*/.mvn
 /SpringBoot-OAuth-Login-Example/src/main/resources/application.properties
 /SpringBoot-OAuth-Rest-JWT/src/main/resources/static/login.html
 /SpringBoot-OAuth-Rest-JWT/src/main/resources/application.properties
