--- a/SpringBoot-Mybatis-Plus/pom.xml
+++ b/SpringBoot-Mybatis-Plus/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
         </dependency>
+        <!-- 其他依赖 -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.8</version>
+        </dependency>
         <!-- mybatis-plus >= 3.5.2 -->
         <dependency>
             <groupId>com.baomidou</groupId>
