--- a/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
+++ b/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
@@ -4,15 +4,15 @@ server:
 spring:
   datasource:
     dynamic:
-      primary: master # 设置默认的数据源或者数据源组,默认值即为master
+      primary: slave_1 # 设置默认的数据源或者数据源组,默认值即为master
       strict: false   # 严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         master:
-          url: jdbc:mysql://127.0.0.1:3306/rob_necessities?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://127.0.0.1:3306/rob_necessities?useSSL=false&serverTimezone=Asia/Shanghai
           username: root
           password: redhat
         slave_1:
-          url: jdbc:mysql://127.0.0.1:3306/rob_necessities?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+          url: jdbc:postgresql://127.0.0.1:5432/rob_necessities?TimeZone=Asia/Shanghai&stringtype=unspecified
           username: root
           password: redhat
       hikari:
@@ -25,6 +25,8 @@ spring:
 
 # 逻辑删除
 mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #mybatis-plus配置控制台打印完整带参数SQL语句
   global-config:
     db-config:
       logic-delete-field: deleted  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
