--- a/SpringBoot-Cache-With-Redis/src/main/resources/application.yaml
+++ b/SpringBoot-Cache-With-Redis/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
   h2:
     console:
       enabled: true
-#  jackson:
-#    default-property-inclusion: non_null
-#    serialization:
-#      fail-on-empty-beans: false
+  jackson:
+    default-property-inclusion: non_null
+    serialization:
+      fail-on-empty-beans: false
