--- a/SpringBoot-JWT-Token-Based/pom.xml
+++ b/SpringBoot-JWT-Token-Based/pom.xml
@@ -6,16 +6,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.7.RELEASE</version>
+        <version>2.7.11</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.example</groupId>
-    <artifactId>jwt</artifactId>
+    <artifactId>SpringBoot-JWT-Token-Based</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>JWT for Spring Security</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
+        <jwt.version>0.11.5</jwt.version>
     </properties>
 
     <dependencies>
@@ -68,19 +69,19 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
-            <version>0.11.2</version>
+            <version>${jwt.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
-            <version>0.11.2</version>
+            <version>${jwt.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <!-- or jjwt-gson if Gson is preferred -->
             <artifactId>jjwt-jackson</artifactId>
-            <version>0.11.2</version>
+            <version>${jwt.version}</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
