--- a/SpringBoot-JPA-Multi-Hikari-DataSource/src/main/resources/application.yaml
+++ b/SpringBoot-JPA-Multi-Hikari-DataSource/src/main/resources/application.yaml
@@ -21,7 +21,9 @@ spring:
 
 ---
 spring:
-  profiles: home
+  config:
+    activate:
+      on-profile: home
   datasource:
     hikari:
       jdbcUrl: jdbc:mysql://192.168.1.231:3306/one?useSSL=false
