--- a/SpringBoot-MyBatis-Multi-Hikari-DataSource/src/main/resources/application.yaml
+++ b/SpringBoot-MyBatis-Multi-Hikari-DataSource/src/main/resources/application.yaml
@@ -20,9 +20,11 @@ mybatis:
 # 命名文档块1
 ---
 spring:
-  profiles: pc
+  config:
+    activate:
+      on-profile: pc
   datasource:
     hikari:
-      jdbc-url: jdbc:mysql://192.168.1.231:3306/one?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+      jdbc-url: jdbc:mysql://localhost:3306/one?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
     second-hikari:
-      jdbc-url: jdbc:mysql://192.168.1.231:3306/two?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+      jdbc-url: jdbc:mysql://localhost:3306/two?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
