--- a/SpringBoot-MyBatis-Single-Druid-DataSource/pom.xml
+++ b/SpringBoot-MyBatis-Single-Druid-DataSource/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.8</version>
+        <version>2.7.11</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>singledruid</artifactId>
+    <artifactId>SpringBoot-MyBatis-Single-Druid-DataSource</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <description>SpringBoot-MyBatis-Single-Druid-DataSource</description>
 
@@ -29,11 +29,11 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <!-- 2.1.x适配springboot 2.1~2.4；2.2.x适配springboot 2.5+ -->
-            <version>2.2.0</version>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
-            <version>1.2.8</version>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
     <build>
