--- a/SpringBoot-MyBatis-Single-Druid-DataSource/src/main/resources/application.yaml
+++ b/SpringBoot-MyBatis-Single-Druid-DataSource/src/main/resources/application.yaml
@@ -2,12 +2,14 @@ spring:
   profiles:
     active: default
   datasource:
-    initialization-mode: always
     druid:
       url: jdbc:mysql://localhost:3306/common?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
       username: root
       password: redhat
       driver-class-name: com.mysql.cj.jdbc.Driver
+  sql:
+    init:
+      mode: always
 
 mybatis:
   configuration:
@@ -17,7 +19,9 @@ mybatis:
 # 命名文档块1
 ---
 spring:
-  profiles: pc
   datasource:
     druid:
       url: jdbc:mysql://192.168.1.231:3306/common?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+  config:
+    activate:
+      on-profile: pc
