如何在Mybatis的单数据源和多数据源情况下打印SQL

--- a/SpringBoot-MyBatis-Single-Druid-DataSource/src/main/resources/application.yaml
+++ b/SpringBoot-MyBatis-Single-Druid-DataSource/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 
 # 命名文档块1
