--- a/SpringBoot-OAuth-Login-Example/pom.xml
+++ b/SpringBoot-OAuth-Login-Example/pom.xml
@@ -7,17 +7,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.7.RELEASE</version>
+        <version>2.7.11</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <groupId>org.example</groupId>
-    <artifactId>oauth</artifactId>
+    <artifactId>SpringBoot-OAuth-Login-Example</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>Spring Security + OAuth Login + Google Sign-In 架构与实例解析</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
