完成SpringBoot-UsernamePassword-FormLogin的JDK17适配

--- a/SpringBoot-UsernamePassword-FormLogin/pom.xml
+++ b/SpringBoot-UsernamePassword-FormLogin/pom.xml
@@ -5,17 +5,17 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.7.RELEASE</version>
+        <version>2.7.11</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>form</artifactId>
+    <artifactId>SpringBoot-UsernamePassword-FormLogin</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>form</name>
     <description>Form Login for Spring Security</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
