--- a/SpringBoot-Mybatis-Plus/pom.xml
+++ b/SpringBoot-Mybatis-Plus/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
             <version>3.5.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-spring-boot-starter</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
