--- a/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
+++ b/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     dynamic:
-      primary: slave_1 # 设置默认的数据源或者数据源组,默认值即为master
+      primary: master # 设置默认的数据源或者数据源组,默认值即为master
       strict: false   # 严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
       datasource:
         master:
@@ -29,6 +29,30 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # mybatis-plus配置控制台打印完整带参数SQL语句
   global-config:
     db-config:
-      logic-delete-field: deleted  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
-      logic-delete-value: 1        # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0    # 逻辑未删除值(默认为 0)
+      logic-delete-field: deleteTime     # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: now()          # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: "null"     # 逻辑未删除值(默认为 0)
+
+
+# springdoc-openapi项目配置 https://doc.xiaominfo.com/docs/quick-start
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.example.springbootmybatisplus.controller
+# knife4j的增强配置，不需要增强可以不配
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
+
+logging:
+  level:
+    com.example.springbootmybatisplus.config: info
