全局异常处理 响应增强, 包括忽略响应增强的注解@IgnoreResponseAdvice 错误码、系统异常和服务异常的包装

--- a/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
+++ b/SpringBoot-Mybatis-Plus/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       hikari:
         max-lifetime: 1800000
         connection-timeout: 5000
-        idle-timeout: 3600000
+        idle-timeout: 600000
         max-pool-size: 12
         min-idle: 4
         connection-test-query: /**ping*/
